--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BirthdayCat</title>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-
   <style>
     body {
       margin: 0;
-      height: 100vh;
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
       background-size: 600% 600%;
       animation: gradientMove 10s ease-in-out infinite;
+      font-family: 'Abril Fatface', cursive;
       overflow-x: hidden;
     }
 
@@ -32,32 +31,34 @@
     }
 
     #topTitle {
-      font-family: 'Abril Fatface', cursive;
       font-size: 3.5rem;
-      margin: 0;
       animation: colorShift 5s infinite;
       text-align: center;
+      margin: 40px 0 20px;
     }
 
     #nyanZone {
+      position: relative;
+      height: 300px;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       gap: 20px;
-      margin-top: 40px;
-      z-index: 20;
     }
 
     #nyanCat {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
       width: 160px;
-      transition: transform 2s ease-in-out;
+      transition: transform 1.5s ease-in-out;
     }
 
     #dontPress {
       padding: 14px 30px;
       font-size: 22px;
-      font-family: 'Abril Fatface', cursive;
       background: linear-gradient(90deg, #ff4d4d, #ffb347, #47ffb3, #4d94ff, #b347ff);
       background-size: 300% 300%;
       animation: gradientMove 5s ease infinite;
@@ -72,11 +73,39 @@
       animation: colorShift 2s infinite;
     }
 
+    #videoSection {
+      display: grid;
+      grid-template-columns: 1fr 1.5fr 1fr;
+      align-items: start;
+      gap: 20px;
+      padding: 40px;
+    }
+
+    #videoSection img {
+      width: 400px;
+      height: 300px;
+      border-radius: 20px;
+      object-fit: cover;
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    }
+
+    #videoBox {
+      width: 100%;
+      height: 65vh;
+      border-radius: 20px;
+      overflow: hidden;
+    }
+
+    #videoBox video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
     #gameContainer {
       display: none;
       width: 100%;
-      height: 400px;
-      margin-top: 60px;
+      height: 500px;
       background: url('https://i.imgur.com/lo8vZ2T.png');
       background-size: cover;
       position: relative;
@@ -86,37 +115,31 @@
     #flappyCanvas {
       width: 100%;
       height: 100%;
+      display: block;
     }
   </style>
 </head>
 <body>
-  <div style="display: flex; justify-content: center; align-items: center; padding-top: 40px;">
-    <div style="background: rgba(0,0,0,0.3); border-radius: 30px; padding: 20px 40px; box-shadow: 0 0 20px rgba(0,0,0,0.4);">
-      <h1 id="topTitle">Welcome BirthdayCat</h1>
-    </div>
-  </div>
+  <h1 id="topTitle">Welcome BirthdayCat</h1>
 
   <div id="nyanZone">
     <img id="nyanCat" src="giphy.gif" alt="Nyan Cat">
     <button id="dontPress"><span>DON'T PRESS 😼</span></button>
   </div>
 
-  <section style="display: grid; grid-template-columns: 1fr 1.5fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
-    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
-      <img src="gozluk.gif" alt="Top Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-      <img src="gozluk.gif" alt="Bottom Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+  <section id="videoSection">
+    <div style="display: flex; flex-direction: column; align-items: center; gap: 20px;">
+      <img src="gozluk.gif" alt="Cat 1">
+      <img src="gozluk.gif" alt="Cat 2">
     </div>
-
-    <div style="width: 100%; height: 65%; border-radius: 20px; overflow: hidden; position: relative; align-self: center;">
-      <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
+    <div id="videoBox">
+      <video id="bcatVideo" autoplay loop muted playsinline>
         <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
-        Your browser does not support the video tag.
       </video>
     </div>
-
-    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
-      <img src="gozluk.gif" alt="Top Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
-      <img src="gozluk.gif" alt="Bottom Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+    <div style="display: flex; flex-direction: column; align-items: center; gap: 20px;">
+      <img src="gozluk.gif" alt="Cat 3">
+      <img src="gozluk.gif" alt="Cat 4">
     </div>
   </section>
 
@@ -127,21 +150,88 @@
   <audio id="bgMusic" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c5762a6ffb.mp3" loop></audio>
 
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const vid = document.getElementById("bcatVideo");
-      vid.playbackRate = 3.0;
-    });
-
     const nyan = document.getElementById("nyanCat");
     const btn = document.getElementById("dontPress");
     const gameContainer = document.getElementById("gameContainer");
     const bgMusic = document.getElementById("bgMusic");
+    const canvas = document.getElementById("flappyCanvas");
+    const ctx = canvas.getContext("2d");
+    let isGameStarted = false;
 
     btn.addEventListener("click", () => {
-      nyan.style.transform = "translateY(400px) scale(1.2)";
-      gameContainer.style.display = "block";
-      bgMusic.play();
+      let position = 0;
+      const interval = setInterval(() => {
+        position += 5;
+        nyan.style.transform = `translate(${Math.sin(position/20)*50}px, ${position}px)`;
+        if (position >= 500) {
+          clearInterval(interval);
+          gameContainer.style.display = "block";
+          bgMusic.play();
+          startGame();
+        }
+      }, 20);
     });
+
+    function startGame() {
+      isGameStarted = true;
+      let nyanY = 150;
+      let gravity = 1.5;
+      let velocity = 0;
+      let score = 0;
+
+      let pipes = [{ x: canvas.width, y: Math.floor(Math.random() * canvas.height / 2) + 100 }];
+
+      document.addEventListener("keydown", () => {
+        velocity = -20;
+      });
+
+      function draw() {
+        if (!isGameStarted) return;
+
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+        // draw nyan cat
+        ctx.fillStyle = "#ff69b4";
+        ctx.fillRect(50, nyanY, 40, 40);
+
+        velocity += gravity;
+        nyanY += velocity;
+
+        for (let i = 0; i < pipes.length; i++) {
+          let pipe = pipes[i];
+          pipe.x -= 4;
+
+          ctx.fillStyle = "green";
+          ctx.fillRect(pipe.x, 0, 50, pipe.y);
+          ctx.fillRect(pipe.x, pipe.y + 120, 50, canvas.height);
+
+          if (
+            50 < pipe.x + 50 &&
+            50 + 40 > pipe.x &&
+            (nyanY < pipe.y || nyanY + 40 > pipe.y + 120)
+          ) {
+            alert("Game Over! Score: " + score);
+            document.location.reload();
+          }
+
+          if (pipe.x === 50) {
+            score++;
+          }
+        }
+
+        if (pipes[pipes.length - 1].x < canvas.width - 200) {
+          pipes.push({ x: canvas.width, y: Math.floor(Math.random() * canvas.height / 2) + 100 });
+        }
+
+        ctx.fillStyle = "black";
+        ctx.font = "24px Abril Fatface";
+        ctx.fillText("Score: " + score, 20, 30);
+
+        requestAnimationFrame(draw);
+      }
+
+      draw();
+    }
   </script>
 </body>
 </html>
