--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     /* İKON BAR */
     #iconBar {
       position: fixed;
-      top: 40px;
-      right: 40px;
-      display: fixed;
+      top: 15px;
+      right: 5px;
+      display: flex;
       gap: 24px;
       z-index: 999;
     }
