--- a/index.html
+++ b/index.html
@@ -49,21 +49,25 @@
       width: 240px;
     }
 
-    <div id="iconBar">
-    <body>#iconBar {
-      position: fixed;
-      top: 20px;
-      right: 30px;
-      display: flex;
-      gap: 24px;
-      z-index: 9999;
-    }
+    #iconBar {
+  position: fixed;
+  top: 20px;
+  right: 30px;
+  display: flex;
+  gap: 24px;
+  z-index: 9999; 
+}
 
-    #iconBar a img {
-      width: 42px;
-      height: 42px;
-      transition: transform 0.3s ease, filter 0.3s ease;
-    }
+#iconBar a img {
+  width: 42px;
+  height: 42px;
+  transition: transform 0.3s ease, filter 0.3s ease;
+}
+
+#iconBar a:hover img {
+  transform: scale(1.2);
+  filter: brightness(1.3);
+}
 
     #iconBar a:hover img {
       transform: scale(1.2);
