--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
   top: 20px;
   right: 30px;
   display: flex;
-  gap: 24px;
-  z-index: 9999; 
+  gap: 20px;
+  z-index: 10000;
 }
 
 #iconBar a img {
-  width: 42px;
-  height: 42px;
+  width: 40px;
+  height: 40px;
   transition: transform 0.3s ease, filter 0.3s ease;
 }
 
@@ -68,6 +68,7 @@
   transform: scale(1.2);
   filter: brightness(1.3);
 }
+
 
     #iconBar a:hover img {
       transform: scale(1.2);
@@ -77,22 +78,21 @@
 </head>
 
 <body>
-
-  <!-- İKON BAR -->
   <div id="iconBar">
-    <a href="https://t.me/YOUR_TELEGRAM" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
-    </a>
-    <a href="https://x.com/YOUR_X" target="_blank">
-      <img src="Xpng.png" alt="X">
-    </a>
-    <a href="https://dexscreener.com" target="_blank">
-      <img src="Dexpng.png" alt="Dexscreener">
-    </a>
-    <a href="https://coingecko.com" target="_blank">
-      <img src="geckopng3.webp" alt="CoinGecko">
-    </a>
-  </div>
+  <a href="https://t.me/YOUR_TELEGRAM" target="_blank">
+    <img src="images/telegram.png" alt="Telegram">
+  </a>
+  <a href="https://x.com/YOUR_X" target="_blank">
+    <img src="X png.png" alt="X">
+  </a>
+  <a href="https://dexscreener.com" target="_blank">
+    <img src="Dex png.png" alt="Dexscreener">
+  </a>
+  <a href="https://coingecko.com" target="_blank">
+    <img src="gecko png.webp" alt="CoinGecko">
+  </a>
+</div>
+
 
   <!-- BAŞLIK -->
   <div style="display: flex; justify-content: center; align-items: center; padding-top: 40px;">
