--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <style>
     body {
       margin: 0;
-      height: 100vh;
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
       background-size: 600% 600%;
       animation: gradientMove 10s ease-in-out infinite;
@@ -49,26 +48,21 @@
       width: 240px;
     }
 
+    /* SABİT İKON BAR */
     #iconBar {
-  position: fixed;
-  top: 20px;
-  right: 30px;
-  display: flex;
-  gap: 20px;
-  z-index: 10000;
-}
+      position: fixed;
+      top: 20px;
+      right: 30px;
+      display: flex;
+      gap: 20px;
+      z-index: 9999;
+    }
 
-#iconBar a img {
-  width: 40px;
-  height: 40px;
-  transition: transform 0.3s ease, filter 0.3s ease;
-}
-
-#iconBar a:hover img {
-  transform: scale(1.2);
-  filter: brightness(1.3);
-}
-
+    #iconBar a img {
+      width: 42px;
+      height: 42px;
+      transition: transform 0.3s ease, filter 0.3s ease;
+    }
 
     #iconBar a:hover img {
       transform: scale(1.2);
@@ -78,21 +72,22 @@
 </head>
 
 <body>
-  <div id="iconBar">
-  <a href="https://t.me/YOUR_TELEGRAM" target="_blank">
-    <img src="images/telegram.png" alt="Telegram">
-  </a>
-  <a href="https://x.com/YOUR_X" target="_blank">
-    <img src="X png.png" alt="X">
-  </a>
-  <a href="https://dexscreener.com" target="_blank">
-    <img src="Dex png.png" alt="Dexscreener">
-  </a>
-  <a href="https://coingecko.com" target="_blank">
-    <img src="gecko png.webp" alt="CoinGecko">
-  </a>
-</div>
 
+  <!-- SABİT İKON BAR -->
+  <div id="iconBar">
+    <a href="https://t.me/YOUR_TELEGRAM" target="_blank">
+      <img src="images/telegram.png" alt="Telegram">
+    </a>
+    <a href="https://x.com/YOUR_X" target="_blank">
+      <img src="X png.png" alt="X">
+    </a>
+    <a href="https://dexscreener.com" target="_blank">
+      <img src="Dex png.png" alt="Dexscreener">
+    </a>
+    <a href="https://coingecko.com" target="_blank">
+      <img src="gecko png3.webp" alt="CoinGecko">
+    </a>
+  </div>
 
   <!-- BAŞLIK -->
   <div style="display: flex; justify-content: center; align-items: center; padding-top: 40px;">
@@ -106,7 +101,7 @@
     <img id="nyanCat" src="giphy.gif" alt="Nyan Cat">
   </div>
 
-  <!-- ANA GÖRSEL ALAN -->
+  <!-- GÖRSEL ALAN -->
   <section style="display: grid; grid-template-columns: 1fr 1.5fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
     
     <!-- Sol 2 GIF -->
