--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       width: 240px;
     }
 
-  <body>
+    /* SABİT LOGO BAR */
     #iconBar {
       position: fixed;
       top: 20px;
@@ -72,6 +72,7 @@
 </head>
 
 <body>
+  <!-- SABİT LOGO BAR -->
   <div id="iconBar">
     <a href="https://t.me/YOUR_TELEGRAM" target="_blank">
       <img src="Telegrampng.png" alt="Telegram">
