--- a/test.html
+++ b/test.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Test Sabit Bar</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sabit Bar Testi</title>
+
   <style>
     body {
       margin: 0;
-      height: 200vh; /* sayfa uzun olsun, scroll testi yapabilelim */
-      background: #f0f0f0;
+      padding: 0;
+      height: 200vh;
+      background: linear-gradient(to bottom, #ffdde1, #ee9ca7);
     }
 
+    /* SABİT BAR */
     #iconBar {
       position: fixed;
       top: 20px;
@@ -22,20 +26,30 @@
     #iconBar a img {
       width: 50px;
       height: 50px;
-      border-radius: 8px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      transition: transform 0.3s ease, filter 0.3s ease;
+    }
+
+    #iconBar a:hover img {
+      transform: scale(1.2);
+      filter: brightness(1.3);
     }
   </style>
 </head>
+
 <body>
 
   <div id="iconBar">
     <a href="#"><img src="Telegrampng.png" alt="Telegram"></a>
     <a href="#"><img src="Xpng.png" alt="X"></a>
-    <a href="#"><img src="Dexpng.png" alt="Dex"></a>
-    <a href="#"><img src="geckopng3.webp" alt="Gecko"></a>
+    <a href="#"><img src="Dexpng.png" alt="Dexscreener"></a>
+    <a href="#"><img src="geckopng3.webp" alt="CoinGecko"></a>
   </div>
 
-  <h1 style="padding: 100px;">Scroll Et ve Logoların Sabit Kalıp Kalmadığına Bak</h1>
+  <h1 style="padding: 150px 30px; font-family: sans-serif; color: #333;">
+    Aşağı kaydır, logolar sabit kalıyor mu kontrol et!
+  </h1>
 
 </body>
 </html>
