--- a/test.html
+++ b/test.html
@@ -3,43 +3,46 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sabit Bar Testi</title>
+  <title>Test Sabit Bar</title>
 
   <style>
-    body {
+    * {
       margin: 0;
       padding: 0;
-      height: 200vh;
-      background: linear-gradient(to bottom, #ffdde1, #ee9ca7);
+      box-sizing: border-box;
     }
 
-    /* SABİT BAR */
+    body {
+      height: 200vh;
+      background: linear-gradient(to bottom right, #ffdde1, #c1e1ff);
+      font-family: sans-serif;
+    }
+
     #iconBar {
       position: fixed;
       top: 20px;
-      right: 30px;
+      right: 20px;
       display: flex;
-      gap: 20px;
+      gap: 16px;
       z-index: 9999;
     }
 
-    #iconBar a img {
+    #iconBar img {
       width: 50px;
       height: 50px;
-      border-radius: 12px;
+      border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.3);
-      transition: transform 0.3s ease, filter 0.3s ease;
+      transition: transform 0.3s ease;
     }
 
-    #iconBar a:hover img {
+    #iconBar img:hover {
       transform: scale(1.2);
-      filter: brightness(1.3);
     }
   </style>
 </head>
-
 <body>
 
+  <!-- SABİT BAR -->
   <div id="iconBar">
     <a href="#"><img src="Telegrampng.png" alt="Telegram"></a>
     <a href="#"><img src="Xpng.png" alt="X"></a>
@@ -47,9 +50,7 @@
     <a href="#"><img src="geckopng3.webp" alt="CoinGecko"></a>
   </div>
 
-  <h1 style="padding: 150px 30px; font-family: sans-serif; color: #333;">
-    Aşağı kaydır, logolar sabit kalıyor mu kontrol et!
-  </h1>
+  <h1 style="padding: 100px;">Scroll et bak! Logolar sabit mi? 😼</h1>
 
 </body>
 </html>
