--- a/test.html
+++ b/test.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Test Sabit Bar</title>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sabit Logo Testi</title>
   <style>
-    * {
+    body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
       height: 200vh;
-      background: linear-gradient(to bottom right, #ffdde1, #c1e1ff);
-      font-family: sans-serif;
+      background: #f0f0f0;
     }
 
     #iconBar {
@@ -23,34 +17,28 @@
       top: 20px;
       right: 20px;
       display: flex;
-      gap: 16px;
+      gap: 20px;
       z-index: 9999;
     }
 
     #iconBar img {
       width: 50px;
       height: 50px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-      transition: transform 0.3s ease;
-    }
-
-    #iconBar img:hover {
-      transform: scale(1.2);
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
     }
   </style>
 </head>
 <body>
 
-  <!-- SABİT BAR -->
   <div id="iconBar">
-    <a href="#"><img src="Telegrampng.png" alt="Telegram"></a>
-    <a href="#"><img src="Xpng.png" alt="X"></a>
-    <a href="#"><img src="Dexpng.png" alt="Dexscreener"></a>
-    <a href="#"><img src="geckopng3.webp" alt="CoinGecko"></a>
+    <a href="#"><img src="https://hanook01.github.io/bcat/Telegrampng.png" alt="Telegram"></a>
+    <a href="#"><img src="https://hanook01.github.io/bcat/Xpng.png" alt="X"></a>
+    <a href="#"><img src="https://hanook01.github.io/bcat/Dexpng.png" alt="Dex"></a>
+    <a href="#"><img src="https://hanook01.github.io/bcat/geckopng3.webp" alt="Gecko"></a>
   </div>
 
-  <h1 style="padding: 100px;">Scroll et bak! Logolar sabit mi? 😼</h1>
+  <h1 style="padding: 150px;">Logolar Sabit Mi? Sayfayı Kaydır ve Kontrol Et 😼</h1>
 
 </body>
 </html>
