--- a/test.html
+++ b/test.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sabit Logo Testi</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Logo Sabit Test</title>
+
   <style>
     body {
-      margin: 0;
-      padding: 0;
       height: 200vh;
-      background: #f0f0f0;
+      background: linear-gradient(to bottom, #ffe6f0, #cceeff);
+      margin: 0;
     }
 
     #iconBar {
       position: fixed;
-      top: 20px;
+      top: 15px;
       right: 20px;
       display: flex;
-      gap: 20px;
+      gap: 15px;
       z-index: 9999;
+      background-color: rgba(255, 255, 255, 0.4);
+      padding: 10px 15px;
+      border-radius: 20px;
+      backdrop-filter: blur(5px);
     }
 
     #iconBar img {
-      width: 50px;
-      height: 50px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      width: 40px;
+      height: 40px;
+      transition: transform 0.3s ease;
+      border-radius: 10px;
+    }
+
+    #iconBar img:hover {
+      transform: scale(1.2);
     }
   </style>
 </head>
@@ -38,7 +46,7 @@
     <a href="#"><img src="https://hanook01.github.io/bcat/geckopng3.webp" alt="Gecko"></a>
   </div>
 
-  <h1 style="padding: 150px;">Logolar Sabit Mi? Sayfayı Kaydır ve Kontrol Et 😼</h1>
+  <h1 style="padding: 100px 30px;">Scroll et kralım 👑 Logolar sabit mi kontrol et 🔍</h1>
 
 </body>
 </html>
