--- a/test.html
+++ b/test.html
@@ -3,33 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Logo Sabit Test</title>
+  <title>Sabit Bar Test</title>
 
   <style>
     body {
-      height: 200vh;
-      background: linear-gradient(to bottom, #ffe6f0, #cceeff);
       margin: 0;
+      height: 200vh;
+      background: linear-gradient(to bottom, #ffdde1, #c1e1ff);
+      font-family: sans-serif;
     }
 
     #iconBar {
       position: fixed;
-      top: 15px;
+      top: 20px;
       right: 20px;
       display: flex;
-      gap: 15px;
+      gap: 20px;
       z-index: 9999;
-      background-color: rgba(255, 255, 255, 0.4);
-      padding: 10px 15px;
-      border-radius: 20px;
-      backdrop-filter: blur(5px);
     }
 
     #iconBar img {
-      width: 40px;
-      height: 40px;
-      transition: transform 0.3s ease;
+      width: 50px;
+      height: 50px;
       border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      transition: transform 0.3s ease;
     }
 
     #iconBar img:hover {
@@ -37,16 +35,17 @@
     }
   </style>
 </head>
+
 <body>
 
   <div id="iconBar">
-    <a href="#"><img src="https://hanook01.github.io/bcat/Telegrampng.png" alt="Telegram"></a>
-    <a href="#"><img src="https://hanook01.github.io/bcat/Xpng.png" alt="X"></a>
-    <a href="#"><img src="https://hanook01.github.io/bcat/Dexpng.png" alt="Dex"></a>
-    <a href="#"><img src="https://hanook01.github.io/bcat/geckopng3.webp" alt="Gecko"></a>
+    <a href="#"><img src="Telegrampng.png" alt="Telegram"></a>
+    <a href="#"><img src="Xpng.png" alt="X"></a>
+    <a href="#"><img src="Dexpng.png" alt="Dexscreener"></a>
+    <a href="#"><img src="geckopng3.webp" alt="CoinGecko"></a>
   </div>
 
-  <h1 style="padding: 100px 30px;">Scroll et kralım 👑 Logolar sabit mi kontrol et 🔍</h1>
+  <h1 style="padding: 100px;">Scroll et kralım, bu sefer SABİT! 😼</h1>
 
 </body>
 </html>
