--- a/index.html
+++ b/index.html
@@ -56,12 +56,17 @@
       display: flex;
       gap: 20px;
       z-index: 9999;
+      background-color: rgba(255, 255, 255, 0.3);
+      padding: 10px 15px;
+      border-radius: 16px;
+      backdrop-filter: blur(5px);
     }
 
     #iconBar a img {
       width: 42px;
       height: 42px;
       transition: transform 0.3s ease, filter 0.3s ease;
+      border-radius: 8px;
     }
 
     #iconBar a:hover img {
