--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BirthdayCat</title>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+
   <style>
-    html, body {
+        html, body {
       margin: 0;
       padding: 0;
       min-height: 100%;
+      height: auto;
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
       background-size: 600% 600%;
       animation: gradientMove 10s ease-in-out infinite;
     }
+
+
+
     @keyframes gradientMove {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
+
     @keyframes colorShift {
       0% { color: #ff9a9e; }
       25% { color: #fad0c4; }
@@ -26,13 +32,15 @@
       75% { color: #c2e9fb; }
       100% { color: #ff9a9e; }
     }
+
     #topTitle {
       font-family: 'Abril Fatface', cursive;
       font-size: 3.5rem;
+      margin: 0;
       animation: colorShift 8s ease-in-out infinite;
       text-align: center;
-      margin: 40px 0 0 0;
     }
+
     #nyanZone {
       position: absolute;
       top: 170px;
@@ -40,6 +48,7 @@
       transform: translateX(-50%);
       z-index: 99;
     }
+
     #nyanCat {
       width: 240px;
     }
@@ -48,8 +57,10 @@
 
 <body>
   <!-- BAŞLIK -->
-  <div style="text-align: center;">
-    <h1 id="topTitle">Welcome BirthdayCat</h1>
+  <div style="display: flex; justify-content: center; align-items: center; padding-top: 40px;">
+    <div style="background: rgba(0,0,0,0.3); border-radius: 30px; padding: 20px 40px; box-shadow: 0 0 20px rgba(0,0,0,0.4);">
+      <h1 id="topTitle">Welcome BirthdayCat</h1>
+    </div>
   </div>
 
   <!-- NYAN CAT -->
@@ -57,130 +68,175 @@
     <img id="nyanCat" src="nyan-cat.gif" alt="Nyan Cat">
   </div>
 
-  <!-- ANA KISIM (VİDEO + GÖZLÜK) -->
-  <section style="display: grid; grid-template-columns: 1fr 1.5fr 1fr; align-items: center; height: 100vh; padding: 40px; gap: 20px;">
-    <div style="display: flex; flex-direction: column; align-items: center; gap: 20px;">
-      <img src="gozluk.gif" style="width: 500px; height: 400px; border-radius: 20px;" />
-      <img src="gozluk.gif" style="width: 500px; height: 400px; border-radius: 20px;" />
+  <!-- GÖRSEL ALAN -->
+  <section style="display: grid; grid-template-columns: 1fr 1.5fr 1fr; align-items: center; height: 100vh; gap: 20px; padding: 40px; box-sizing: border-box;">
+    
+    <!-- Sol 2 GIF -->
+    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
+      <img src="gozluk.gif" alt="Top Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+      <img src="gozluk.gif" alt="Bottom Left Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
     </div>
-    <div style="width: 100%; height: 65%; border-radius: 20px; overflow: hidden; position: relative;">
-      <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover;">
+
+    <!-- VİDEO ORTA -->
+    <div style="width: 100%; height: 65%; border-radius: 20px; overflow: hidden; position: relative; align-self: center;">
+      <video id="bcatVideo" autoplay loop muted playsinline style="width: 100%; height: 100%; object-fit: cover; border-radius: 20px;">
         <source src="bcat-video-fast-optimized.mp4" type="video/mp4">
+        Your browser does not support the video tag.
       </video>
     </div>
-    <div style="display: flex; flex-direction: column; align-items: center; gap: 20px;">
-      <img src="gozluk.gif" style="width: 500px; height: 400px; border-radius: 20px;" />
-      <img src="gozluk.gif" style="width: 500px; height: 400px; border-radius: 20px;" />
+
+    <!-- Sağ 2 GIF -->
+    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; gap: 20px;">
+      <img src="gozluk.gif" alt="Top Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
+      <img src="gozluk.gif" alt="Bottom Right Cat" style="width: 500px; height: 400px; object-fit: cover; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.4);" />
     </div>
   </section>
 
-  <!-- OYUN ALANI -->
-  <section id="flappySection" style="height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 20px;">
-    <h2 style="color: white; font-family: 'Abril Fatface', cursive; font-size: 2.5rem;">🎂 Flappy BCAT 🎮</h2>
-    <canvas id="flappyCanvas" width="660" height="480" style="border: 3px solid white; border-radius: 10px; max-width: 95vw;"></canvas>
-    <div id="scoreDisplay" style="color: white; margin-top: 20px; font-size: 1.5rem;">Score: <span id="score">0</span></div>
-  </section>
-
+  <!-- SABİT LOGO BAR (JS ile) -->
   <script>
-    // Video hızını ayarla
-    document.addEventListener("DOMContentLoaded", () => {
-      document.getElementById("bcatVideo").playbackRate = 3.0;
-    });
+    document.addEventListener("DOMContentLoaded", function () {
+      const bar = document.createElement("div");
+      bar.id = "iconBarJS";
+      bar.style.position = "absolute";
+      bar.style.top = "20px";
+      bar.style.right = "30px";
+      bar.style.display = "flex";
+      bar.style.gap = "20px";
+      bar.style.zIndex = "9999";
+      bar.style.padding = "10px 15px";
+      bar.style.background = "rgba(255,255,255,0.3)";
+      bar.style.borderRadius = "16px";
+      bar.style.backdropFilter = "blur(5px)";
 
-    // FLAPPY OYUN KODLARI
-    const canvas = document.getElementById("flappyCanvas");
-    const ctx = canvas.getContext("2d");
+      const logos = [
+        { href: "https://t.me/YOUR_TELEGRAM", src: "Telegrampng.png", alt: "Telegram" },
+        { href: "https://x.com/YOUR_X", src: "Xpng.png", alt: "X" },
+        { href: "https://dexscreener.com", src: "Dexpng.png", alt: "Dexscreener" },
+        { href: "https://coingecko.com", src: "geckopng3.webp", alt: "CoinGecko" }
+      ];
 
-    const nyanImg = new Image();
-    nyanImg.src = "nyan-cat.gif";
-
-    const bg = new Image();
-    bg.src = "mario-bg.png"; // Bu görseli yükle: hareketli mario tarzı arka plan
-
-    const pipeWidth = 80;
-    const gap = 140;
-    let pipes = [];
-    let bgX = 0;
-    let score = 0;
-    let isPlaying = true;
-
-    let nyan = {
-      x: 100,
-      y: 150,
-      width: 50,
-      height: 40,
-      velocity: 0,
-      gravity: 0.6,
-      jumpStrength: -10
-    };
-
-    function spawnPipe() {
-      let topHeight = Math.random() * 200 + 50;
-      pipes.push({
-        x: canvas.width,
-        top: topHeight,
-        bottom: topHeight + gap
+      logos.forEach(logo => {
+        const a = document.createElement("a");
+        a.href = logo.href;
+        a.target = "_blank";
+        const img = document.createElement("img");
+        img.src = logo.src;
+        img.alt = logo.alt;
+        img.style.width = "42px";
+        img.style.height = "42px";
+        img.style.borderRadius = "8px";
+        img.style.transition = "transform 0.3s ease, filter 0.3s ease";
+        img.onmouseover = () => {
+          img.style.transform = "scale(1.2)";
+          img.style.filter = "brightness(1.3)";
+        };
+        img.onmouseout = () => {
+          img.style.transform = "scale(1)";
+          img.style.filter = "brightness(1)";
+        };
+        a.appendChild(img);
+        bar.appendChild(a);
       });
-    }
 
-    document.addEventListener("keydown", e => {
-      if (e.code === "Space") nyan.velocity = nyan.jumpStrength;
+      document.body.appendChild(bar);
+
+      // Video hızı
+      const vid = document.getElementById("bcatVideo");
+      vid.playbackRate = 3.0;
     });
-    canvas.addEventListener("click", () => {
-      nyan.velocity = nyan.jumpStrength;
-    });
-
-    setInterval(spawnPipe, 2000);
-
-    function draw() {
-      if (!isPlaying) return;
-
-      bgX -= 2;
-      if (bgX <= -canvas.width) bgX = 0;
-      ctx.drawImage(bg, bgX, 0, canvas.width, canvas.height);
-      ctx.drawImage(bg, bgX + canvas.width, 0, canvas.width, canvas.height);
-
-      nyan.velocity += nyan.gravity;
-      nyan.y += nyan.velocity;
-
-      if (nyan.y + nyan.height >= canvas.height) {
-        isPlaying = false;
-        alert("Oyun bitti! Skor: " + score);
-        return;
-      }
-
-      ctx.drawImage(nyanImg, nyan.x, nyan.y, nyan.width, nyan.height);
-
-      for (let i = 0; i < pipes.length; i++) {
-        let p = pipes[i];
-        p.x -= 2;
-
-        // Borular
-        ctx.fillStyle = "#22aa44";
-        ctx.fillRect(p.x, 0, pipeWidth, p.top);
-        ctx.fillRect(p.x, p.bottom, pipeWidth, canvas.height - p.bottom);
-
-        // Çarpma kontrolü
-        if (
-          nyan.x + nyan.width > p.x &&
-          nyan.x < p.x + pipeWidth &&
-          (nyan.y < p.top || nyan.y + nyan.height > p.bottom)
-        ) {
-          isPlaying = false;
-          alert("Oyun bitti! Skor: " + score);
-          return;
-        }
-
-        if (p.x + pipeWidth === nyan.x) {
-          score++;
-        }
-      }
-
-      document.getElementById("score").textContent = score;
-      requestAnimationFrame(draw);
-    }
-
-    draw();
   </script>
+
 </body>
 </html>
+<section>
+  <!-- OYUN ALANI (sayfa 2) -->
+<section id="flappySection" style="height: 100vh; background: linear-gradient; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
+  <h2 style="color: white; font-family: 'Abril Fatface', cursive; font-size: 2.5rem; margin-bottom: 20px;">🎂 Flappy BCAT 🎮</h2>
+
+  <canvas id="flappyCanvas" width="460" height="480" style="border: 3px solid white; border-radius: 10px; background: linear-gradient(to bottom, #a1c4fd, #c2e9fb); max-width: 90vw;"></canvas>
+
+  <div id="scoreDisplay" style="margin-top: 20px; color: white; font-size: 1.5rem; font-family: monospace;">
+    Score: <span id="score">0</span>
+  </div>
+</section>
+<script>
+  <script>
+  const canvas = document.getElementById("flappyCanvas");
+  const ctx = canvas.getContext("2d");
+
+  let score = 0;
+  let isPlaying = true;
+
+  function draw() {
+    if (!isPlaying) return;
+
+    // Temel Arka Plan (ileride değişecek)
+    ctx.fillStyle = "#c2e9fb";
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+    // Skoru güncelle
+    document.getElementById("score").textContent = score;
+
+    requestAnimationFrame(draw);
+  }
+
+  draw();
+</script>
+<script>
+  const canvas = document.getElementById("flappyCanvas");
+  const ctx = canvas.getContext("2d");
+
+  const nyanImg = new Image();
+  nyanImg.src = "nyan-cat.gif"; // senin dosya adın neyse o olsun
+
+  let score = 0;
+  let isPlaying = true;
+
+  // Karakterin başlangıç konumu
+  let nyan = {
+    x: 50,
+    y: 150,
+    width: 50,
+    height: 40,
+    velocity: 0,
+    gravity: 0.6,
+    jumpStrength: -10
+  };
+
+  // Kontrol: Space + Touch
+  document.addEventListener("keydown", (e) => {
+    if (e.code === "Space") nyan.velocity = nyan.jumpStrength;
+  });
+
+  canvas.addEventListener("click", () => {
+    nyan.velocity = nyan.jumpStrength;
+  });
+
+  function draw() {
+    if (!isPlaying) return;
+
+    // Arka plan
+    ctx.fillStyle = "#c2e9fb";
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+    // Karakter fiziği
+    nyan.velocity += nyan.gravity;
+    nyan.y += nyan.velocity;
+
+    // Yere çarpma kontrolü
+    if (nyan.y + nyan.height >= canvas.height) {
+      isPlaying = false;
+      alert("Oyun bitti! Skor: " + score);
+    }
+
+    // Nyan Cat çiz
+    ctx.drawImage(nyanImg, nyan.x, nyan.y, nyan.width, nyan.height);
+
+    // Skoru göster
+    document.getElementById("score").textContent = score;
+
+    requestAnimationFrame(draw);
+  }
+
+  draw();
+</script>
