--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
 </html>
 <section>
   <!-- OYUN ALANI (sayfa 2) -->
-<section id="flappySection" style="height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
+<!-- OYUN ALANI (sayfa 2) -->
+<section id="flappySection" style="height: 100vh; background: #222; display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
   <h2 style="color: white; font-family: 'Abril Fatface', cursive; font-size: 2.5rem; margin-bottom: 20px;">🎂 Flappy BCAT 🎮</h2>
 
   <canvas id="flappyCanvas" width="660" height="480" style="border: 3px solid white; border-radius: 10px; max-width: 90vw;"></canvas>
@@ -225,20 +226,19 @@
   const canvas = document.getElementById("flappyCanvas");
   const ctx = canvas.getContext("2d");
 
-  // Arka plan resmi
-  const bgImage = new Image();
-  bgImage.src = "u1ZpVC.png"; // senin görsel
-
   const nyanImg = new Image();
   nyanImg.src = "nyan-cat.gif";
+
+  const bgImage = new Image();
+  bgImage.src = "u1ZpVC.png";
+
+  let bgX = 0;
+  const scrollSpeed = 2;
 
   let score = 0;
   let isPlaying = true;
 
-  let bgX = 0;
-  const scrollSpeed = 1.5;
-
-  const nyan = {
+  let nyan = {
     x: 50,
     y: 150,
     width: 50,
@@ -248,7 +248,24 @@
     jumpStrength: -10
   };
 
-  // Kontroller
+  // Engellerin temeli hazır
+  const pipes = [];
+  const pipeWidth = 60;
+  const pipeGap = 150;
+  const pipeSpeed = 2;
+  const pipeInterval = 140; // frame cinsinden
+
+  let frameCount = 0;
+
+  function addPipe() {
+    const topHeight = Math.random() * (canvas.height - pipeGap - 100) + 50;
+    pipes.push({
+      x: canvas.width,
+      top: topHeight,
+      bottom: topHeight + pipeGap
+    });
+  }
+
   document.addEventListener("keydown", (e) => {
     if (e.code === "Space") nyan.velocity = nyan.jumpStrength;
   });
@@ -260,23 +277,57 @@
   function draw() {
     if (!isPlaying) return;
 
-    // Scroll arka plan çizimi
+    // Scroll arka plan
     bgX -= scrollSpeed;
     if (bgX <= -canvas.width) bgX = 0;
     ctx.drawImage(bgImage, bgX, 0, canvas.width, canvas.height);
     ctx.drawImage(bgImage, bgX + canvas.width, 0, canvas.width, canvas.height);
 
-    // Nyan Cat fizik
+    // Engeller
+    for (let i = 0; i < pipes.length; i++) {
+      const p = pipes[i];
+      p.x -= pipeSpeed;
+
+      // Üst boru
+      ctx.fillStyle = "#7fcd91";
+      ctx.fillRect(p.x, 0, pipeWidth, p.top);
+
+      // Alt boru
+      ctx.fillStyle = "#7fcd91";
+      ctx.fillRect(p.x, p.bottom, pipeWidth, canvas.height - p.bottom);
+
+      // Çarpışma
+      if (
+        nyan.x < p.x + pipeWidth &&
+        nyan.x + nyan.width > p.x &&
+        (nyan.y < p.top || nyan.y + nyan.height > p.bottom)
+      ) {
+        isPlaying = false;
+        alert("Çarptın! Skor: " + score);
+      }
+
+      // Skor arttırma (her boruyu geçince 1 puan)
+      if (p.x + pipeWidth === nyan.x) {
+        score++;
+      }
+    }
+
+    // Nyan fiziği
     nyan.velocity += nyan.gravity;
     nyan.y += nyan.velocity;
 
-    if (nyan.y + nyan.height >= canvas.height) {
+    if (nyan.y + nyan.height >= canvas.height || nyan.y <= 0) {
       isPlaying = false;
-      alert("Oyun bitti! Skor: " + score);
+      alert("Yere çarptın! Skor: " + score);
     }
 
     ctx.drawImage(nyanImg, nyan.x, nyan.y, nyan.width, nyan.height);
     document.getElementById("score").textContent = score;
+
+    frameCount++;
+    if (frameCount % pipeInterval === 0) {
+      addPipe();
+    }
 
     requestAnimationFrame(draw);
   }
